mensagem fim de jogo

--- a/T2/trabalho02.html
+++ b/T2/trabalho02.html
@@ -16,15 +16,15 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <!-- <div id="blocker" class="w3-display-container">
-    <div id="endingMessage" class="w3-display-middle w3-center w3-white w3-opacity" style="width: 40%!important; height: 40%!important; align-items: center!important;">
+  <div id="" class="display: none!important;">
+    <div id="endingMessage" class="w3-display-middle w3-center w3-white" style="opacity: 80%!important; width: 40%!important; height: 40%!important; align-items: center!important; display: none!important;">
         <h1>         Parabéns!         </h1>
         <p>                             </p>
         <p>     Você concluiu todos     </p>
         <p>        os desafios e        </p>
         <p>        venceu o jogo!       </p>
     </div>
-  </div> -->
+  </div>
   <div id="webgl-output">      
     <script type="module" src="trabalho02.js"></script>
   </div>
