adicionando icones das chaves

--- a/T3/trabalho02.html
+++ b/T3/trabalho02.html
@@ -25,8 +25,15 @@
         <p>        venceu o jogo!       </p>
     </div>
   </div>
-  <div id="webgl-output">      
-    <script type="module" src="trabalho02.js"></script>
+
+  <div id="keys" class="top-left" style=" max-width: 35%; position:absolute; padding-left: 10px; padding-top: 10px;">
+    <img id="blue_key" src="assets/key/chave_azul.png" style="max-width: 10%; display: none"> 
+    <img id="red_key" src="assets/key/chave_vermelha.png" style="max-width: 10%; display: none">
+    <img id="yellow_key" src="assets/key/chave_amarela.png" style="max-width: 10%; display: none">
+  </div>
+    
+    <div id="webgl-output">     
+      <script type="module" src="trabalho02.js"></script>
   </div>
 </body>
 
