--- a/T3/trabalho02.html
+++ b/T3/trabalho02.html
@@ -26,10 +26,10 @@
     </div>
   </div>
 
-  <div id="keys" class="top-left" style=" max-width: 35%; position:absolute; padding-left: 10px; padding-top: 10px;">
-    <img id="blue_key" src="assets/key/chave_azul.png" style="max-width: 10%; display: none"> 
-    <img id="red_key" src="assets/key/chave_vermelha.png" style="max-width: 10%; display: none">
-    <img id="yellow_key" src="assets/key/chave_amarela.png" style="max-width: 10%; display: none">
+  <div id="keys" class="top-left" style=" max-width: 30%; position:absolute; padding-left: 25px; padding-top: 5px; opacity: 60%;">
+    <img id="blue_key" src="assets/key/chave_azul.png" style="max-width: 12%; display: none"> 
+    <img id="red_key" src="assets/key/chave_vermelha.png" style="max-width: 12%; display: none">
+    <img id="yellow_key" src="assets/key/chave_amarela.png" style="max-width: 12%; display: none">
   </div>
     
     <div id="webgl-output">     
