--- a/T3/appMobile.html
+++ b/T3/appMobile.html
@@ -49,7 +49,7 @@
   </div>
     
     <div id="webgl-output">     
-      <script type="module" src="mobile/appMobile.js"></script>
+      <script type="module" src="appMobile.js"></script>
   </div>
 </body>
 
