--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>trabalho02</title>
-    <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../html/resources/default.css">
-    <link rel="stylesheet" href="../html/resources/w3.css">
-    <link rel="stylesheet" href="../html/resources/menu.css"> 
+    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./html/resources/default.css">
+    <link rel="stylesheet" href="./html/resources/w3.css">
+    <link rel="stylesheet" href="./html/resources/menu.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 
     <style>  
@@ -25,12 +25,12 @@
   <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
   <script type="importmap"> 
-    {"imports": {"three": "../build/three.module.js"}} 
+    {"imports": {"three": "./build/three.module.js"}} 
   </script> 
 
   <div id="joystickWrapper"></div>
 
-  <script src="../libs/other/nipplejs.js"></script>        
+  <script src="./libs/other/nipplejs.js"></script>        
 
   <div id="" class="display: none!important;">
     <div id="endingMessage" class="w3-display-middle w3-center w3-white" style="opacity: 80%!important; width: 30%!important; height: 30%!important; align-items: center!important; display: none!important;">
