--- a/mobile/appMobile.html
+++ b/mobile/appMobile.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>trabalho02</title>
-    <link rel="shortcut icon" href="../favicon.ico">
+    <title>Space Robot</title>
+    <link rel="shortcut icon" href="assets/icon.png">
     <link rel="stylesheet" href="../html/resources/default.css">
     <link rel="stylesheet" href="../html/resources/w3.css">
     <link rel="stylesheet" href="../html/resources/menu.css"> 
+    <link rel="stylesheet" href="loading.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 
     <style>  
@@ -22,6 +23,15 @@
 </head>
 
 <body>
+  <section id="loading-screen">
+    <div id="content">
+        <button class="button" id="loading-button">Loading...</button>
+        <div id="loader">
+          <img id="loading-gif" src="assets/loading.gif" alt="">
+        </div> 
+    </div> 
+  </section>
+
   <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
   <script type="importmap"> 
