--- a/T3/trabalho03.html
+++ b/T3/trabalho03.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>trabalho02</title>
+    <title>Space Robot</title>
     <link rel="shortcut icon" href="assets/icon.png">
     <link rel="stylesheet" href="../html/resources/default.css">
     <link rel="stylesheet" href="../html/resources/w3.css">
     <link rel="stylesheet" href="../html/resources/menu.css"> 
+    <link rel="stylesheet" href="loading.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
@@ -15,6 +16,15 @@
   <script type="importmap"> 
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
+
+  <section id="loading-screen">
+    <div id="content">
+        <button class="button" id="loading-button">Loading...</button>
+        <div id="loader">
+          <img id="loading-gif" src="assets/loading.gif" alt="">
+        </div> 
+    </div> 
+  </section>
 
   <div id="" class="display: none!important;">
     <div id="endingMessage" class="w3-display-middle w3-center w3-white" style="opacity: 80%!important; width: 30%!important; height: 30%!important; align-items: center!important; display: none!important;">
@@ -32,7 +42,7 @@
     <img id="yellow_key" src="assets/key/chave_amarela.png" style="max-width: 12%; display: none">
   </div>
     
-    <div id="webgl-output">     
+    <div id="webgl-output" style="display: none">     
       <script type="module" src="trabalho03.js"></script>
   </div>
 </body>
