--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>trabalho02</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <title>Space Robot</title>
+    <link rel="shortcut icon" href="mobile/assets/icon.png">
     <link rel="stylesheet" href="html/resources/default.css">
     <link rel="stylesheet" href="html/resources/w3.css">
     <link rel="stylesheet" href="html/resources/menu.css"> 
+    <link rel="stylesheet" href="mobile/loading.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 
     <style>  
@@ -22,6 +23,15 @@
 </head>
 
 <body>
+  <section id="loading-screen">
+    <div id="content">
+        <button class="button" id="loading-button">Loading...</button>
+        <div id="loader">
+          <img id="loading-gif" src="mobile/assets/loading.gif" alt="">
+        </div> 
+    </div> 
+  </section>
+
   <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
   <script type="importmap"> 
@@ -30,7 +40,7 @@
 
   <div id="joystickWrapper"></div>
 
-  <script src="libs/other/nipplejs.js"></script>        
+  <script src="../libs/other/nipplejs.js"></script>        
 
   <div id="" class="display: none!important;">
     <div id="endingMessage" class="w3-display-middle w3-center w3-white" style="opacity: 80%!important; width: 30%!important; height: 30%!important; align-items: center!important; display: none!important;">
