--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="joystickWrapper"></div>
 
-  <script src="../libs/other/nipplejs.js"></script>        
+  <script src="libs/other/nipplejs.js"></script>        
 
   <div id="" class="display: none!important;">
     <div id="endingMessage" class="w3-display-middle w3-center w3-white" style="opacity: 80%!important; width: 30%!important; height: 30%!important; align-items: center!important; display: none!important;">
